--- a/frontend/web/partials/404.html
+++ b/frontend/web/partials/404.html
@@ -1,25 +1,15 @@
-<?php
-
-use yii\helpers\Html;
-
-/* @var $this yii\web\View */
-/* @var $name string */
-/* @var $message string */
-/* @var $exception Exception */
-
-$this->title = $name;
-?>
 <div class="site-error">
 
-    <h1><?= Html::encode($this->title) ?></h1>
+    <h1>Not Found (#404)</h1>
 
     <div class="alert alert-danger">
-        <?= nl2br(Html::encode($message)) ?>
+        Page not found.
     </div>
 
     <p>
         The above error occurred while the Web server was processing your request.
     </p>
+
     <p>
         Please contact us if you think this is a server error. Thank you.
     </p>
