--- a/frontend/modules/article/views/index.html
+++ b/frontend/modules/article/views/index.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="form-group">
-            <label for="searchText">Email address</label>
-            <input type="text" class="form-control" id="searchText" placeholder="Email" ng-model="searchField">
+            <label for="searchText">Article</label>
+            <input type="text" class="form-control" id="searchText" placeholder="Article Title" ng-model="searchField">
         </div> 
     </div>
 </div>
